# GEO_EARTH

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  DATA_SOURCES.md  README.md  SETUP.md  docker-compose.yml  enhanced_generate_html.py  enhanced_index.html  enhanced_unified_brett_engine.py  generate_unified_html.py  index.html  linked_html_interface.html  unified_brett_engine.py  verify_integration.py  white_paper_scientific.md
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_create_volcanic_tables.py
backend/app/: __init__.py  auth.py  main.py  main_earthquake.py
backend/app/api/: data.py  location.py  prediction.py
backend/app/core/: __init__.py  brett_engine.py  brett_engine_v39.py  config.py  earthquake_space_engine.py  forecast_engine.py  historical_engine.py  space_correlation_engine.py  volcanic_historical.py  volcanic_locator.py
backend/app/ml/: __init__.py  eruption_forecaster.py  historical_analyzer.py
backend/app/models/: __init__.py  historical.py  prediction.py  ui_config.py  validation.py  volcanic.py
backend/app/routes/: __init__.py  historical.py  validation.py  volcanic.py
backend/app/services/: __init__.py  backtest.py  data_ingest.py  data_sources.py  enhanced_quantum_validation_service.py  historical_data_sources.py  historical_ingest.py  variable_storage_service.py
backend/app/subroutines/: datasets.py  lightning.py  magnetometer.py  schumann.py
backend/tests/: __init__.py  test_data_ingest.py  test_main.py  test_ml_forecaster.py  test_volcanic_forecast.py  test_volcanic_historical.py
docs/: architecture.md  data-sources.md  installation.md  usage.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
sample_pages/: 01_landing_page.html  02_location_input.html  03_engine_selection.html  04_prediction_display.html  (+1 more)
(+47 files in other folders)
